--- a/RNN_analysis.ipynb
+++ b/RNN_analysis.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "4972dd0e-f3ab-49bb-9775-873c2216e52e",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f12c0356-186b-4cec-8d45-250d98ec1a07",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "39693404-1c4d-4560-9f6d-7400dfe6fd71",
    "metadata": {},
    "outputs": [],
@@ -128,12 +128,70 @@
     "    action_batches, mask_batches, end_flag_batches = \\\n",
     "    train_rnn.load_data(f'data/vae_preprocessed_{dim_latent_z}dimlatent.npz', \n",
     "                                        f'data/vae_rollouts_env_vars.npz', batch_size = batch_size,\n",
-    "                       truncate_at_batch=truncate_at_batch)"
+    "                       truncate_at_batch=truncate_at_batch)\n",
+    "episode_len = [torch.nonzero(end_flags)[:, 1].unsqueeze(0) for end_flags in end_flag_batches]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
+   "id": "5b9d1409-aeba-4281-9722-b708570b73cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length_cutoff = 300  # Specify the desired length cutoff\n",
+    "\n",
+    "filtered_episodes = []\n",
+    "\n",
+    "for i in range(len(episode_len)):\n",
+    "    for j in range(episode_len[i].shape[1]):\n",
+    "        if episode_len[i][0, j] >= length_cutoff:\n",
+    "            episode_data = {\n",
+    "                'mean': mean_batches[i][:length_cutoff, j],\n",
+    "                'var': var_batches[i][:length_cutoff, j],\n",
+    "                'state_vars': state_vars_batches[i][:length_cutoff, j],\n",
+    "                'action': action_batches[i][:length_cutoff, j],\n",
+    "                'mask': mask_batches[i][:length_cutoff, j],\n",
+    "                'end_flag': end_flag_batches[i][:length_cutoff, j]\n",
+    "            }\n",
+    "            filtered_episodes.append(episode_data)\n",
+    "\n",
+    "# Convert the filtered episodes to tensors\n",
+    "filtered_episodes_tensor = {\n",
+    "    'mean': torch.stack([ep['mean'] for ep in filtered_episodes]),\n",
+    "    'var': torch.stack([ep['var'] for ep in filtered_episodes]),\n",
+    "    'state_vars': torch.stack([ep['state_vars'] for ep in filtered_episodes]),\n",
+    "    'action': torch.stack([ep['action'] for ep in filtered_episodes]),\n",
+    "    'mask': torch.stack([ep['mask'] for ep in filtered_episodes]),\n",
+    "    'end_flag': torch.stack([ep['end_flag'] for ep in filtered_episodes])\n",
+    "} # shape of every tensor: [n_episodes, batch_size, dim_latent_z]\n",
+    "n_episodes = filtered_episodes_tensor['mean'].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dc080817-bf71-419c-968a-5aa44cb30006",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([562, 256, 8])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_episodes_tensor['mean'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "d4e5bd3a-12a6-412d-a8ad-e99f953dc52d",
    "metadata": {},
    "outputs": [],
@@ -152,6 +210,14 @@
     "z_values = train_vae.reparameterization(means, vars)\n",
     "inputs = torch.cat([z_values, actions], dim=2)[:, :-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3350d674-ce3e-4481-b902-f70b993ee109",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
