prepare for openmind

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -18,6 +18,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "fc44b8dc-1dad-4c49-9832-ec6bc358b263",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 5 100\n",
+      "5.0 5 150\n",
+      "10.0 5 100\n",
+      "20.0 5 50\n",
+      "0.0 6 50\n",
+      "5.0 6 100\n",
+      "10.0 6 0\n",
+      "20.0 6 150\n",
+      "0.0 7 100\n",
+      "5.0 7 100\n",
+      "10.0 7 200\n",
+      "20.0 7 150\n",
+      "0.0 8 50\n",
+      "5.0 8 100\n",
+      "10.0 8 150\n",
+      "20.0 8 150\n",
+      "0.0 9 50\n",
+      "5.0 9 100\n",
+      "10.0 9 150\n",
+      "20.0 9 150\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "for random_index in range(5, 10):\n",
+    "    for lambda_sv_i, lambda_sv in enumerate([0.0, 5.0, 10.0, 20.0]):\n",
+    "        color = [\"black\", \"blue\", \"orange\", \"red\"][lambda_sv_i]\n",
+    "        state_vars_to_predict = [9, 10, 11]\n",
+    "        detach_gradients = False\n",
+    "        use_layernorm = True\n",
+    "        truncate_at_batch = 40\n",
+    "        n_hidden = 128\n",
+    "        train_epochs = 250\n",
+    "        save_every_epochs = 50\n",
+    "        max_gradient_norm = 100.0\n",
+    "        lr = 0.001\n",
+    "        random_index = random_index\n",
+    "        lambda_sv = lambda_sv\n",
+    "        dim_latent_z = 8\n",
+    "        if lambda_sv == 0: state_vars_to_predict = []\n",
+    "        \n",
+    "        sv_str = 'x'.join([str(x) for x in state_vars_to_predict]) if len(state_vars_to_predict)>0 else 'X'\n",
+    "        rnn_id = f\"_ln{1 if use_layernorm else 0}_nh{n_hidden}_dlz{dim_latent_z}_mgn{max_gradient_norm}_lr{lr}\" + \\\n",
+    "                 f\"_dg{1 if detach_gradients else 0}_da{truncate_at_batch}_sv{sv_str}_lsv{lambda_sv}_r{random_index}\"\n",
+    "\n",
+    "        last_epoch = 0\n",
+    "        for file in os.listdir(f\"data/rnn{rnn_id}/\"):\n",
+    "            if file.startswith(\"rnn_model_epoch\") and file.endswith(\".pt\"):\n",
+    "                epoch_num = int(file.split(\"epoch\")[1].split(\".\")[0])\n",
+    "                if epoch_num > last_epoch:\n",
+    "                    last_epoch = epoch_num\n",
+    "        print(lambda_sv, random_index, last_epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "dd9dce9f-7ecd-4e11-8f73-398ff350b52d",
    "metadata": {},
