--- a/testing.ipynb
+++ b/testing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "fc44b8dc-1dad-4c49-9832-ec6bc358b263",
    "metadata": {},
    "outputs": [
@@ -26,32 +26,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0 20 100\n",
-      "10.0 20 150\n",
-      "20.0 20 250\n",
-      "40.0 20 250\n",
-      "0.0 21 50\n",
-      "10.0 21 250\n",
-      "20.0 21 250\n",
-      "40.0 21 250\n",
-      "0.0 22 250\n",
-      "10.0 22 250\n",
-      "20.0 22 250\n",
-      "40.0 22 150\n",
-      "0.0 23 150\n",
-      "10.0 23 250\n",
-      "20.0 23 250\n",
-      "40.0 23 200\n",
-      "0.0 24 100\n",
-      "10.0 24 150\n",
-      "20.0 24 200\n",
-      "40.0 24 200\n"
+      "0.0 0 100\n",
+      "10.0 0 250\n",
+      "20.0 0 250\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/rnn_ln1_nh128_dlz8_mgn100.0_lr0.001_dg0_da40_sv9x10x11_lsv40.0_r0/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m rnn_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_ln\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m1\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39muse_layernorm\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m0\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_nh\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_hidden\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_dlz\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdim_latent_z\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_mgn\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmax_gradient_norm\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_lr\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \\\n\u001b[1;32m     21\u001b[0m          \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_dg\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m1\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39mdetach_gradients\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m0\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_da\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtruncate_at_batch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_sv\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msv_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_lsv\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlambda_sv\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_r\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrandom_index\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     23\u001b[0m last_epoch \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/rnn\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mrnn_id\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m file\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrnn_model_epoch\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m file\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m     26\u001b[0m         epoch_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(file\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/rnn_ln1_nh128_dlz8_mgn100.0_lr0.001_dg0_da40_sv9x10x11_lsv40.0_r0/'"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "for random_index in range(20,25):\n",
+    "for random_index in range(5):\n",
     "    for lambda_sv_i, lambda_sv in enumerate([0.0, 10.0, 20.0, 40.0]):\n",
     "        color = [\"black\", \"blue\", \"orange\", \"red\"][lambda_sv_i]\n",
     "        state_vars_to_predict = [9, 10, 11]\n",
